<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="missingPrefix">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0sp"
        android:layout_height="38sp"
        android:background="@color/ether_blue"
        android:fontFamily="@font/comfortaa_bold"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/ether_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="0sp"
        android:layout_height="30sp"
        android:background="@color/ether_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Buttons! Constrained in a relative layout starting/ending at the blue rectangles -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="42sp"
        android:layout_marginBottom="50sp">

        <Button
            android:id="@+id/Accounts"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/Accounts"
            android:layout_alignLeft="@id/Accounts"
            android:layout_alignEnd="@id/Temp"
            android:layout_alignRight="@id/Accounts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:onClick="toAccounts"
            android:text="@string/accounts"
            android:textColor="@color/ether_text"
            app:backgroundTint="#E86868" />

        <Button
            android:id="@+id/Temp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Accounts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:onClick="toAccounts"
            android:text="@string/temp"
            android:textColor="@color/ether_text"
            app:backgroundTint="#E86868" />



    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>